# homelessness-stats

./: CLAUDE.md  README.md  TEMPLATE.md  pyproject.toml
data/processed/: merged_city_data.csv  merged_county_data.csv  merged_state_data.csv
data/raw/: fetch_cdc_overdose_county.py  fetch_election_results.py  fetch_hud_coc_crosswalk.py  fetch_hud_fmr_county.py  fetch_hud_pit_coc.py  fetch_hud_pit_state.py  fetch_noaa_coc.py  fetch_noaa_state.py  fetch_samhsa_state.py
docs/: index.html  report.html
docs/superpowers/plans/: 2026-05-31-plan-1-scaffold.md  2026-05-31-plan-2-state-notebooks.md  2026-05-31-plan-3-county-notebooks.md  2026-05-31-plan-4-city-notebooks.md
notebooks/: 01_state_data_collection.ipynb  02_state_homeless_map.ipynb  03_state_housing_affordability.ipynb  04_state_spending.ipynb  05_state_drug_mental.ipynb  06_state_income_poverty.ipynb  07_state_demographics.ipynb  08_county_data_collection.ipynb  09_county_homeless_map.ipynb  10_county_housing_affordability.ipynb  11_county_spending.ipynb  12_county_drug_mental.ipynb  13_county_income_poverty.ipynb  14_county_demographics.ipynb  15_county_sheltered_vs_unsheltered.ipynb  16_county_climate.ipynb  17_city_data_collection.ipynb  18_city_homeless_map.ipynb  19_city_housing_affordability.ipynb  20_city_spending.ipynb  21_city_drug_mental.ipynb  22_city_income_poverty.ipynb  23_city_demographics.ipynb  24_city_sheltered_unsheltered_climate.ipynb  25_city_veteran_homeless.ipynb
scripts/: generate_html.py
src/: city_data.py  county_data.py  state_data.py
(+1 files in other folders)
